# ChooseYourTube-API

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: dependencies.py  main.py  queue.py  worker.py
app/auth/: __init__.py  backend.py  deps.py  manager.py  models.py
app/clients/: youtube.py
app/core/: config.py
app/db/: schema_guard.py  session.py
app/db/crud/: crud_base.py  crud_channel.py  crud_folder.py  crud_playlist.py  (+2 more)
app/routers/: channels.py  folders.py  health.py  playlists.py  tags.py  videos.py
app/schemas/: base.py  channel.py  folder.py  playlist.py  tag.py  video.py
app/services/: channel_playlist_service.py  channel_service.py  folder_service.py  playlist_service.py  tag_service.py  video_service.py
docs/: DOCKER.md
migration/: env.py
migration/versions/: 04987b21232e_add_folder_position.py  100843d1b5f2_add_fastapi_users_and_multi_tenant_.py  20260130_convert_yt_tags_to_json.py  20260130_merge_heads.py  20260202_folder_tag_uuid.py  20260202_migrate_folder_tag_ids_to_uuid.py  20260217_add_video_fts.py  20260218_add_channel_playlist_source_fields.py  20260218_channel_playlist_src.py  2fc0fcb4e8dc_add_playlist_table_and_playlist_videos_.py  7f3cd234e397_add_tag_relationships_to_channels_and_.py  8a70008cd021_add_is_system_and_current_position_to_.py  992dacbe0482_create_initial_database_schema.py  a67d3ea6e7b3_video_add_tags_and_is_watched.py  c8d6f904317b_add_folder_icon_string_key.py
tests/: conftest.py
tests/clients/: test_youtube_api.py
tests/crud/: test_crud_channel.py  test_crud_channel_write.py  test_crud_folder.py  test_crud_folder_write.py  test_crud_playlist.py  test_crud_tag.py  test_crud_tag_write.py  test_crud_video.py  test_crud_video_write.py
tests/fixtures/: youtube_responses.py
tests/property_based/: __init__.py  test_folder_properties.py  test_playlist_properties.py
tests/routers/: test_auth_multi_user.py  test_channels_router.py  test_folders_router.py  test_playlists_router.py  test_videos_router.py
tests/services/: test_channel_playlist_service.py  test_channel_service.py  test_channel_service_tags.py  test_folder_service.py  test_playlist_service.py  test_video_service_background.py  test_video_service_tags.py
tests/unit/: test_app_startup_schema_check.py  test_db_session.py  test_folder_utils.py  test_migration_integrity.py  test_schema_guard.py  test_video_utils.py
tests/worker/: test_worker.py
(+7 files in other folders)
