[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.4",
    "apscheduler>=3.11.0",
    "arq>=0.25.0",
    "asyncpg>=0.30.0",
    "fastapi>=0.116.1",
    "feedparser>=6.0.12",
    "google-api-python-client>=2.179.0",
    "google-auth-oauthlib>=1.2.2",
    "httpx>=0.28.1",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.10.1",
    "python-multipart>=0.0.20",
    "python-slugify>=8.0.4",
    "redis>=6.4.0",
    "rq>=2.5.0",
    "rq-scheduler>=0.14.0",
    "sqlalchemy[asyncio]>=2.0.43",
    "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "ruff>=0.12.9",
    "types-redis>=4.6.0.20241004",
]
